# ocaml-stack

./: LICENSE.md  README.md  dune-project  stack_machine.opam
lib/: Opcodes.ml  StackAccMachine.ml  StackAccMachine_min.ml  StackMachine.ml  StackMachine_min.ml  dune
test/: dune  stack_machine.ml
